Update with legal name

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 permalink: /posts/:title/
-name: Jonasz Rice
-url: https://jonasz.me
+name: Erin Akarice
+url: https://er1n.me
 description: A wild blog appears.
 future: true
